[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/resource/pixel_style_box.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/fonts/PixelFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/GUI/HelpPanel/HelpPanels.gd" type="Script" id=3]
[ext_resource path="res://assets/sprite/GUI_arrow.png" type="Texture" id=4]
[ext_resource path="res://assets/resource/pixel_style_box_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/sprite/Oursin.png" type="Texture" id=6]
[ext_resource path="res://assets/sprite/Anguille.png" type="Texture" id=7]
[ext_resource path="res://assets/sprite/Algue.png" type="Texture" id=8]
[ext_resource path="res://assets/sprite/Power-up-dash.png" type="Texture" id=9]
[ext_resource path="res://assets/sprite/Power-up-onde.png" type="Texture" id=10]
[ext_resource path="res://assets/sprite/Power-up-bouclier.png" type="Texture" id=11]
[ext_resource path="res://assets/fonts/Myope.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/resource/slider_pixel.tres" type="StyleBox" id=13]
[ext_resource path="res://assets/sprite/grabber.png" type="Texture" id=14]
[ext_resource path="res://assets/sprite/controls_icons.png" type="Texture" id=15]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.788235, 0.792157, 0.862745, 1 )
border_width_top = 4
border_width_bottom = 4
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="DynamicFont" id=9]
extra_spacing_top = -8
extra_spacing_bottom = -3
extra_spacing_char = -1
extra_spacing_space = -3
font_data = ExtResource( 12 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 29, 3 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 29, 0, 29, 3 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 17, 18 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 17, 0, 17, 18 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
extra_spacing_bottom = -11
extra_spacing_char = -1
extra_spacing_space = -3
font_data = ExtResource( 12 )

[node name="HelpPanels" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -256.0
margin_right = 80.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panels" type="Node2D" parent="."]

[node name="Option" type="Panel" parent="Panels"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -157.0
margin_top = 131.0
margin_right = -7.0
margin_bottom = 248.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panels/Option"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.0
margin_top = 4.0
margin_right = 47.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicBar" type="Label" parent="Panels/Option"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
margin_left = 11.0
margin_top = 29.0
margin_right = 55.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Music :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_Slider" type="HSlider" parent="Panels/Option"]
margin_left = 54.0
margin_top = 30.0
margin_right = 138.0
margin_bottom = 46.0
custom_icons/grabber_highlight = ExtResource( 14 )
custom_icons/grabber = ExtResource( 14 )
custom_styles/slider = ExtResource( 13 )
custom_styles/grabber_area = SubResource( 8 )
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundBar" type="Label" parent="Panels/Option"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
margin_left = 11.0
margin_top = 58.0
margin_right = 55.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 2 )
text = "Sound :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound_Slider" type="HSlider" parent="Panels/Option"]
margin_left = 54.0
margin_top = 60.0
margin_right = 138.0
margin_bottom = 76.0
custom_icons/grabber = ExtResource( 14 )
custom_styles/slider = ExtResource( 13 )
custom_styles/grabber_area = SubResource( 8 )

[node name="Goal" type="Panel" parent="Panels"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 131.0
margin_right = 155.0
margin_bottom = 248.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panels/Goal"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.5
margin_top = 4.0
margin_right = 46.5
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "Goal"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Panels/Goal"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -97.0
margin_right = -4.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 2 )
text = "Go to the bottom of the sea (10000 ft), but be careful, there's obstacle on the road"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inputs" type="Panel" parent="Panels"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 167.0
margin_top = 131.0
margin_right = 317.0
margin_bottom = 248.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panels/Inputs"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.5
margin_top = 4.0
margin_right = 46.5
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls_icons" type="TextureRect" parent="Panels/Inputs"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
margin_left = 18.0
margin_top = 36.0
margin_right = 51.0
margin_bottom = 79.0
texture = ExtResource( 15 )

[node name="ControlsLabel" type="Label" parent="Panels/Inputs"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
margin_left = 55.0
margin_top = 36.0
margin_right = 146.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 9 )
text = "Arrows keys to move


Space to use items"
autowrap = true

[node name="Obstacles" type="Panel" parent="Panels"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 329.0
margin_top = 131.0
margin_right = 479.0
margin_bottom = 248.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panels/Obstacles"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.0
margin_top = 2.0
margin_right = 47.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
text = "Obstacles"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anguille" type="AnimatedSprite" parent="Panels/Obstacles"]
position = Vector2( 19.5, 34.5 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="Algue" type="AnimatedSprite" parent="Panels/Obstacles"]
position = Vector2( 20.5, 56.5 )
frames = SubResource( 6 )
frame = 1
playing = true

[node name="AnimatedSprite" type="Sprite" parent="Panels/Obstacles"]
position = Vector2( 20.5, 81.5 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Panels/Obstacles"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
margin_left = 38.0
margin_top = 18.0
margin_right = 139.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 7 )
text = "reverses your controls"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panels/Obstacles"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
margin_left = 38.0
margin_top = 42.0
margin_right = 139.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 7 )
text = "Slows you"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Panels/Obstacles"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
margin_left = 38.0
margin_top = 66.0
margin_right = 139.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 7 )
text = "Kills you"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Powerup" type="Panel" parent="Panels"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 491.0
margin_top = 131.0
margin_right = 641.0
margin_bottom = 248.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panels/Powerup"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.5
margin_top = 4.0
margin_right = 46.5
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "Powerup"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shield" type="Sprite" parent="Panels/Powerup"]
position = Vector2( 19.5, 34.5 )
texture = ExtResource( 11 )

[node name="Dash" type="Sprite" parent="Panels/Powerup"]
position = Vector2( 20.5, 56.5 )
texture = ExtResource( 9 )

[node name="Shock" type="Sprite" parent="Panels/Powerup"]
position = Vector2( 20.5, 81.5 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="Panels/Powerup"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 38.0
margin_top = 18.0
margin_right = 147.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 7 )
text = "Remove malus and protect you 5 s"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panels/Powerup"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 38.0
margin_top = 42.0
margin_right = 139.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 7 )
text = "go fast in one direction"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Panels/Powerup"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 38.0
margin_top = 66.0
margin_right = 139.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 7 )
text = "kill all obstacle in area"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
margin_left = 132.0
margin_top = 225.0
margin_right = 152.0
margin_bottom = 245.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Next"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
margin_left = 3.0
margin_top = 4.0
margin_right = 17.0
margin_bottom = 16.0
texture = ExtResource( 4 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Before" type="Button" parent="."]
margin_left = 9.0
margin_top = 225.0
margin_right = 29.0
margin_bottom = 245.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Before"]
modulate = Color( 0.0588235, 0.0705882, 0.180392, 1 )
margin_left = 3.0
margin_top = 4.0
margin_right = 17.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" type="Tween" parent="."]

[connection signal="value_changed" from="Panels/Option/Music_Slider" to="." method="_on_Music_Slider_value_changed"]
[connection signal="value_changed" from="Panels/Option/Sound_Slider" to="." method="_on_Sound_Slider_value_changed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Before" to="." method="_on_Before_pressed"]
